[package]
name = "pivotal_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pivotal_tracker"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
pivotal_tracker_derive = { path = "../pivotal_tracker_derive" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
