[package]
name = "pivotal_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pivotal_tracker"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
pivotal_tracker_derive = { path = "../pivotal_tracker_derive" }
regex = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
