[package]
name = "story-tracker-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
pivotal_tracker = { version = "*", path = "../pivotal_tracker" }
serde = "1.0.144"
serde_json = "1.0.85"
slug = "0.1.4"
tokio = { version = "1.21.2", features = ["full"] }
