[package]
description = "Library for Pivotal Tracker derive macros. Primarily contains branding macros for now."
edition = "2021"
license = "MIT"
name = "pivotal-tracker-derive"
repository = "https://github.com/jondpenton/story-tracker-cli/tree/master/crates/pivotal-tracker-derive"
version = "1.0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.93"
