[package]
description = "Library for interacting with the Pivotal Tracker API."
edition = "2021"
license = "MIT"
name = "pivotal-tracker"
repository = "https://github.com/jondpenton/story-tracker-cli/tree/master/crates/pivotal-tracker"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
pivotal-tracker-derive = { path = "../pivotal-tracker-derive" }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.21.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
