[package]
description = "Library for interacting with the Pivotal Tracker API."
edition = "2021"
license = "MIT"
name = "pivotal-tracker"
repository = "https://github.com/jondpenton/story-tracker-cli/tree/master/crates/pivotal-tracker"
version = "2.0.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
pivotal-tracker-derive = { version = "1.0.8", path = "../pivotal-tracker-derive" }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.33.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
