[package]
description = "CLI tool for generating story branch names and switching to them. Currently only supports Pivotal Tracker."
edition = "2021"
license = "MIT"
name = "story-tracker-cli"
repository = "https://github.com/jondpenton/story-tracker-cli/tree/master/crates/story-tracker-cli"
version = "2.0.4"

[[bin]]
name = "stb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-git2 = "0.5.4"
clap = { version = "4.5.16", features = ["derive"] }
git2 = "0.19.0"
pivotal-tracker = { version = "2.0.4", path = "../pivotal-tracker" }
serde = "1.0.208"
serde_json = "1.0.125"
slug = "0.1.6"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.16"
